SERVER-32498 Client should capture full thread name